    - renamed property "payrollBU" to "payrollEmployeesOA"
    - renamed property "payrollNBU" to "payrollEmployeesNOA"
- UVGZCoverageType (Changed)
    - property "deathCapital" is now optional
    - property "disabilityCapital" is now optional
    - property "dailyAllowance" is now optional
    - property "dailyHospitalAllowance" is now optional
    - added optional property "subsequentPaymentsAfterDeath"
    - added optional property integrityCapital (moved from DisabilityCapitalType)
    - removed property medicalExpenses
    - added property "medicalExpensesHospitalType"
- UVGZFixedPayrollsType (Changed)
    - renamed property "personId" to "fixedPayrollId"
    - removed property "surplusPayroll"
- UVGZPersonGroupsType (Changed)
    - Added property "personGroupDescription"
    - Removed property "payrollTotal"
    - Renamed property "maximumPayrollAmount" to "maxSalary"
    - Removed property "surplusSalaryTotal"
    - Added mandatory property "payrollEmployees"
    - Added restriction for allowed enum values for "deathCapitalUVG" and "deathCapitalSurplus"
    - Added restriction for allowed enum values for "disabilityCapitalUVG" and "disabilityCapitalSurplusSalary"
- YearlySalaryMultipleType (Changed)
    - translated and added enum values
- YearlySalaryOptionalMultipleType (Removed)

### Version 0.4.0 (05.11.2024)
Version 0.3.0 only included properties for KTG. This version expands the Standard to additionally
 allow transmission of data for UVGO and UVGZ.

- AnnualCancellationType (Removed)
- AHVSalaryMultipleType (Added)
- BenefitCoverageType (Removed)
- BenefitPeriodType (Added)
    - Moved from generics
- CoverageType (Changed)
    - Added validation so at least one of the properties must be set
- DailyAllowanceType (Added)
- DailyHospitalAllowanceType (Added)
- DeathCapitalType (Added)
- DisabilityCapitalType (Added)
- DSBMCoverageType (Changed)
    - changed type to array
    - added property "maximumPayrollAmount"
- DSBPayrollFemaleType (Removed)